Fix blockquote and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -32,12 +32,12 @@ article header p {
   margin-bottom: 0;
   border-bottom: .5px solid;
   padding-top: .05em;
-  padding-bottom: 1.5em;
+  padding-bottom: 1em;
   border-color: #555;
 }
 
 article header + p {
-  padding-top: 0.5em;
+  padding-top: .1em;
 }
 
 article p {
@@ -49,16 +49,14 @@ article p {
   padding-bottom: 0;
 }
 
-blockquote {
-  padding-left: 2em;
-  padding-right: 2em;
+.quote {
+  font-size: 1.5rem;
+  color: #555;
 }
 
-.quote {
-  font-size: 1.125rem;
-  font-style: normal;
-  color: #999;
-  line-height: 1.3;
+article blockquote p {
+  font-size: 1.3rem;
+  color: #555;
 }
 
 body {
